--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -3,7 +3,10 @@ name: Auto Commit
 on:
   schedule:
     - cron: "0 */1 * * *"   # Runs every 1 hours
-  workflow_dispatch:        # Allows manual trigger from GitHub UI
+  workflow_dispatch:
+
+permissions:
+  contents: write    # <---- this gives the workflow permission to push commits
 
 jobs:
   build:
